src/components/App/App.css
.nav a {
    display: inline-block;
}


body {
    margin: 0 auto;
    font-family: 'Lato', 'Roboto', 'sans-serif';
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale; 
    line-height: 1.5rem;
    text-align: center;
    color: #373a36;
    box-sizing: border-box;
    /* overflow-y: hidden; */
    /* width: 90%; */

}

.LandingPage, .CreateAccount, .LoginPage, .ProfilePage, .MemberProfiles, .MyProfile, .PostPage {
    margin-top: 6rem;
}

/* .Nav {
    display: flex;
    flex-flow: row nowrap;
} */

.Nav__HeaderNotIn {
    flex: 1 0 auto;
}

.Nav__HeaderSpace {
    margin: 0.5rem;
}



.Dashboard {
   margin-top: 5.8rem;
}





html {
    height: 100%;
}

.post_btn {
    /* color: white; */
    margin: 0.8rem;
    font-weight: 500;
    border-radius: 3px;
    width: auto;
    border-width: 2px;
    padding: 1rem;
    font-size: 1.15rem;
}

 h4 {
     margin: 0;
 }

.Dashboard__browseContainer {
    display: flex;
    justify-content: center;
    padding: 1rem;
}


.image-upload > input {
    display: none;
}

.image-upload {
    text-align: center;
    position: relative;
}

.image-text {
    visibility: hidden;
    position: absolute;
    top: 33%;
    left: 40%;
    opacity: 0;
}

.image-upload:hover .image-text {
    visibility: visible;
    opacity: 1;
}

.PostPage__postContainer {
    border-bottom: 1px solid #EEE;
}



  /* .menu__toggle {
        display: none;
    } */

/* .DashContainer {
    border: 1px solid #EEE;
} */


.menu__toggle {
    display: initial;
}


.DashNav {
    display: none;
}


* Button styling */
.menu-toggle {
  display: inline-block;
  padding: .75em 15px;
  line-height: 1em;
  font-size: 1em;
  color: #333;
}

.menu-toggle:hover,
.menu-toggle:focus {
  color: #c00;
}


.main-menu {
  position: absolute;
  display: none;
  left: -200px;
  top: 0;
  height: 100%;
  overflow-y: scroll;
  overflow-x: visible;
  transition: left 0.3s ease, box-shadow 0.3s ease;
  z-index: 999;
  background: white;

}

.main-menu ul {
  list-style: none;
  margin: 0;
  
  width: 200px;
  background: white;
}

.main__ul {
    padding: 2.5rem 0 0;
}

.second__ul {
    padding: 0.8rem 0 0;
}

.main-menu a {
  display: block;
  padding: .75em 15px;
  line-height: 1em;
  font-size: 1em;
  color: #373a36;
  text-decoration: none;
  /* border-bottom: 1px solid #383838; */
}

.main-menu li:first-child a {
  border-top: 2px solid #EEE;
  padding-top: 1rem;
}



.main-menu a:hover,
.main-menu a:focus {
  /* background: #333; */
  background: rgba(0, 0, 0, 0.10);
  /* text-decoration: underline; */
}

.main-menu .menu-close {
  position: absolute;
  right: 0;
  top: 0;
}

.main-menu:target,
.main-menu[aria-expanded="true"] {
  display: block;
  left: 0;
  outline: none;
  -moz-box-shadow: 3px 0 12px rgba(0,0,0,.25);
  -webkit-box-shadow: 3px 0 12px rgba(0,0,0,.25);
  box-shadow: 3px 0 12px rgba(0,0,0,.25);
}

.main-menu:target .menu-close,
.main-menu[aria-expanded="true"] .menu-close {
  z-index: 1001;
}

.main-menu:target ul,
.main-menu[aria-expanded="true"] ul {
  position: relative;
  z-index: 1000;
}

.main-menu:target + .backdrop,
.main-menu[aria-expanded="true"] + .backdrop{
  position: absolute;
  display: block;  
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  background: rgba(0,0,0,0.5);
  cursor: default;
}

@supports (position: fixed) {
  .main-menu,
  .main-menu:target + .backdrop,
  .main-menu[aria-expanded="true"] + .backdrop{
    position: fixed;
  }
}


*,
*:before,
*:after {
  box-sizing: border-box;
}

.Nav__header {
  padding: 20px;
  display: flex;
  /* align-items: baseline; */
  position: fixed;
  top: 0;
  background-color: lightgrey;
  width: 100%;
  z-index: 999;
}

article {
  padding: 30px;
  width: 55em;
  font-size: 16px;
  line-height: 1.5em;
}

article h2 {
  font-weight: 500;
  font-size: 28px;
}

.logo {
  margin: 0 auto;
  font-size: 1.5em;
}

.user__image {
    border-radius: 50%;
}


.MemberProfiles__user {
    border: 1px solid #EEE;
    margin: 1rem;
    padding: 1rem;
}

.Post {
    text-align: left;
    border-top: 1px solid #EEE;
    border-bottom: 1px solid #EEE;
}

figcaption {
    font-size: 0.7rem;
}

ul {
    padding: 0;
}


@media only screen and (min-width: 768px) {
    
    body {
        overflow-y: hidden;
    }


    .DashContainer {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
        height: calc(100vh - 280px);
        margin-top: 1rem;
        border: 1px solid #EEE;
    }

    .DashNav {
        display: flex;
        flex: 0 0 100px;
        flex-flow: column nowrap;
        text-align: center;
        z-index: 30;
        background: #061e2a;
        background: linear-gradient(to right,#fefefe, 99%, #8c8c8d);
        padding: 1rem 0 0 0;
        justify-content: flex-start;
    }

    .menu-container {
        display: flex;
        flex-flow: column wrap;
        justify-content: space-between;
    }
    .main-nav-link {
        transition: opacity .2s, visibility .2s;
        flex: 1 1 auto;
        align-self: center;
        display: flex;
        position: relative;
    }

    .DashNav__folderLink {
        font-weight: 500;
        font-size: 0.66rem;
        letter-spacing: 0.04rem;
        color: #03A9F4;
        padding: 0.75rem 0.5rem;
        text-transform: uppercase;
    }

    .DashMainPosts {
        flex: 1 1 75%;
        overflow-y: auto;
    }

    .menu-toggle,
    .main-menu .menu-close {
        display: none;
    }

    .main-menu ul {
        width: auto;
        background: lightgrey;
    }
  
    .main-menu {
        position: relative;
            left: auto;
            top: auto;
            height: auto;
        display: block;
    }
    
    .main__ul {
        display: flex;
        padding: 0;
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
                box-shadow: none;
        height: auto;
        width: auto;
        background: none;
    }

    .second__ul {
        display: none;
    }
    
    .main-menu a {
        color: #06c;
        border: 0 !important; 
    }
    
    .main-menu a:hover,
    .main-menu a:focus {
        background: none; 
        color: #c00;
    }

}

